[JENKINS-76377] Hook management updates unrelated webhook on Bitbucket Server
Fix how to check which of the webhooks registered on the server are the ones being handled by the bitbucket-branch-source plugin.